--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   <script type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
   <!-- JS -->
-  <script type="text/javascript" src="/bundle.js"></script>
+  <script type="text/javascript" src="./bundle.js"></script>
   <!-- POPPER & BOOTSTRAP-->
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
